// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pin Input should render correct style when border color is provided 1`] = `
.c0 {
  display: flex;
  align-items: center;
}

.c1 {
  width: 2.5rem;
  height: 2.5rem;
  margin-right: 0.375rem;
  outline: transparent solid 2px;
  outline-offset: 2px;
  font-size: 1rem;
  text-align: center;
  border-radius: 0.375rem;
  border-width: 1px;
  border-style: solid;
  border-color: rgb(204,204,204);
  background-color: inherit;
  box-sizing: border-box;
}

.c1:focus {
  border-color: rgb(13,110,253);
  box-shadow: rgb(13,110,253) 0px 0px 0px 1px;
}

.c1:last-child {
  margin-right: 0;
}

.c1:valid {
  border-color: rgb(25,135,84);
  box-shadow: rgb(25,135,84) 0px 0px 0px 1px;
  background-color: rgba(25,135,84,0.1);
}

.c1:invalid {
  border-color: rgb(220,53,69);
  box-shadow: rgb(220,53,69) 0px 0px 0px 1px;
  background-color: rgba(220,53,69,0.1);
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<div
  className="c0"
  style={Object {}}
>
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={0}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value="1"
  />
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={1}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value="2"
  />
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={2}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value="3"
  />
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={3}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value="4"
  />
</div>
`;

exports[`Pin Input should render correct style when border color is provided 2`] = `
.c0 {
  display: flex;
  align-items: center;
}

.c1 {
  width: 2.5rem;
  height: 2.5rem;
  margin-right: 0.375rem;
  outline: transparent solid 2px;
  outline-offset: 2px;
  font-size: 1rem;
  text-align: center;
  border-radius: 0.375rem;
  border-width: 1px;
  border-style: solid;
  border-color: rgb(204,204,204);
  background-color: inherit;
  box-sizing: border-box;
}

.c1:focus {
  border-color: rgb(13,110,253);
  box-shadow: rgb(13,110,253) 0px 0px 0px 1px;
}

.c1:last-child {
  margin-right: 0;
}

.c1:valid {
  border-color: rgb(25,135,84);
  box-shadow: rgb(25,135,84) 0px 0px 0px 1px;
  background-color: rgba(25,135,84,0.1);
}

.c1:invalid {
  border-color: rgb(220,53,69);
  box-shadow: rgb(220,53,69) 0px 0px 0px 1px;
  background-color: rgba(220,53,69,0.1);
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<div
  className="c0"
  style={Object {}}
>
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={0}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="a|b|c"
    placeholder="o"
    style={Object {}}
    type="text"
    value="a"
  />
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={1}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="a|b|c"
    placeholder="o"
    style={Object {}}
    type="text"
    value="b"
  />
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={2}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="a|b|c"
    placeholder="o"
    style={Object {}}
    type="text"
    value="c"
  />
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={3}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="a|b|c"
    placeholder="o"
    style={Object {}}
    type="text"
    value="d"
  />
</div>
`;

exports[`Pin Input should render correct style when size is provided 1`] = `
.c0 {
  display: flex;
  align-items: center;
}

.c1 {
  width: 1.5rem;
  height: 1.5rem;
  margin-right: 0.375rem;
  outline: transparent solid 2px;
  outline-offset: 2px;
  font-size: 0.75rem;
  text-align: center;
  border-radius: 0.375rem;
  border-width: 1px;
  border-style: solid;
  border-color: rgb(204,204,204);
  background-color: inherit;
  box-sizing: border-box;
}

.c1:focus {
  border-color: rgb(13,110,253);
  box-shadow: rgb(13,110,253) 0px 0px 0px 1px;
}

.c1:last-child {
  margin-right: 0;
}

.c1:invalid {
  border-color: rgb(220,53,69);
  box-shadow: rgb(220,53,69) 0px 0px 0px 1px;
  background-color: rgba(220,53,69,0.1);
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<div
  className="c0"
  style={Object {}}
>
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={0}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value=""
  />
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={1}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value=""
  />
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={2}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value=""
  />
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={3}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value=""
  />
</div>
`;

exports[`Pin Input should render correct style when size is provided 2`] = `
.c0 {
  display: flex;
  align-items: center;
}

.c1 {
  width: 2rem;
  height: 2rem;
  margin-right: 0.375rem;
  outline: transparent solid 2px;
  outline-offset: 2px;
  font-size: 0.875rem;
  text-align: center;
  border-radius: 0.375rem;
  border-width: 1px;
  border-style: solid;
  border-color: rgb(204,204,204);
  background-color: inherit;
  box-sizing: border-box;
}

.c1:focus {
  border-color: rgb(13,110,253);
  box-shadow: rgb(13,110,253) 0px 0px 0px 1px;
}

.c1:last-child {
  margin-right: 0;
}

.c1:invalid {
  border-color: rgb(220,53,69);
  box-shadow: rgb(220,53,69) 0px 0px 0px 1px;
  background-color: rgba(220,53,69,0.1);
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<div
  className="c0"
  style={Object {}}
>
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={0}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value=""
  />
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={1}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value=""
  />
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={2}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value=""
  />
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={3}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value=""
  />
</div>
`;

exports[`Pin Input should render correct style when size is provided 3`] = `
.c0 {
  display: flex;
  align-items: center;
}

.c1 {
  width: 2.5rem;
  height: 2.5rem;
  margin-right: 0.375rem;
  outline: transparent solid 2px;
  outline-offset: 2px;
  font-size: 1rem;
  text-align: center;
  border-radius: 0.375rem;
  border-width: 1px;
  border-style: solid;
  border-color: rgb(204,204,204);
  background-color: inherit;
  box-sizing: border-box;
}

.c1:focus {
  border-color: rgb(13,110,253);
  box-shadow: rgb(13,110,253) 0px 0px 0px 1px;
}

.c1:last-child {
  margin-right: 0;
}

.c1:invalid {
  border-color: rgb(220,53,69);
  box-shadow: rgb(220,53,69) 0px 0px 0px 1px;
  background-color: rgba(220,53,69,0.1);
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<div
  className="c0"
  style={Object {}}
>
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={0}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value=""
  />
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={1}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value=""
  />
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={2}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value=""
  />
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={3}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value=""
  />
</div>
`;

exports[`Pin Input should render correct style when size is provided 4`] = `
.c0 {
  display: flex;
  align-items: center;
}

.c1 {
  width: 3rem;
  height: 3rem;
  margin-right: 0.375rem;
  outline: transparent solid 2px;
  outline-offset: 2px;
  font-size: 1.125rem;
  text-align: center;
  border-radius: 0.375rem;
  border-width: 1px;
  border-style: solid;
  border-color: rgb(204,204,204);
  background-color: inherit;
  box-sizing: border-box;
}

.c1:focus {
  border-color: rgb(13,110,253);
  box-shadow: rgb(13,110,253) 0px 0px 0px 1px;
}

.c1:last-child {
  margin-right: 0;
}

.c1:invalid {
  border-color: rgb(220,53,69);
  box-shadow: rgb(220,53,69) 0px 0px 0px 1px;
  background-color: rgba(220,53,69,0.1);
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<div
  className="c0"
  style={Object {}}
>
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={0}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value=""
  />
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={1}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value=""
  />
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={2}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value=""
  />
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={3}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value=""
  />
</div>
`;

exports[`Pin Input should render correct when showState is false 1`] = `
.c0 {
  display: flex;
  align-items: center;
}

.c1 {
  width: 2.5rem;
  height: 2.5rem;
  margin-right: 0.375rem;
  outline: transparent solid 2px;
  outline-offset: 2px;
  font-size: 1rem;
  text-align: center;
  border-radius: 0.375rem;
  border-width: 1px;
  border-style: solid;
  border-color: rgb(204,204,204);
  background-color: inherit;
  box-sizing: border-box;
}

.c1:focus {
  border-color: rgb(13,110,253);
  box-shadow: rgb(13,110,253) 0px 0px 0px 1px;
}

.c1:last-child {
  margin-right: 0;
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<div
  className="c0"
  style={Object {}}
>
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={0}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value="1"
  />
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={1}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value="2"
  />
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={2}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value="3"
  />
  <input
    aria-label="Please enter pin code"
    autoComplete="off"
    className="c1"
    data-index={3}
    inputMode="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="o"
    style={Object {}}
    type="text"
    value="4"
  />
</div>
`;
